--- a/attendence/src/main/webapp/css/layout.css
+++ b/attendence/src/main/webapp/css/layout.css
@@ -61,8 +61,8 @@
 
 body {
     background: #599fd9;
-    background: -webkit-linear-gradient(to right, #599fd9, #c2e59c);
-    background: linear-gradient(to right, #599fd9, #c2e59c);
+    background: -webkit-linear-gradient(to right, grey, white);
+    background: linear-gradient(to right, grey, white);
     min-height: 100vh;
     overflow-x: hidden;
 }
