--- a/attendence/src/main/webapp/css/footer.css
+++ b/attendence/src/main/webapp/css/footer.css
@@ -1,3 +1,12 @@
-.footer {
-    text-align: center;
+/* Sticky Footer Classes */
+
+
+
+#page-content {
+    flex: 1 0 auto;
 }
+
+#sticky-footer {
+    flex-shrink: none;
+}
+
