--- a/attandance/src/main/resources/static/css/layout.css
+++ b/attandance/src/main/resources/static/css/layout.css
@@ -85,3 +85,13 @@ body {
     height: 80px;
 }
 
+footer {
+    flex-shrink: 0;
+    background-color: #333333;
+    padding: 8px;
+    color: white;
+}
+
+li a:hover, .active {
+    background-color: #009DFF;
+}
