--- a/attandance/src/main/resources/templates/layout.html
+++ b/attandance/src/main/resources/templates/layout.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="../static/css/layout.css" th:href="@{/css/layout.css}">
     <link rel="stylesheet" href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" href="../static/css/layout.css" th:href="@{/css/layout.css}">
-    <script src="../static/js/jquery-ui.min.js" th:src="@{/js/jquery-ui.min.js}"></script>
+    <link type="text/css" rel="stylesheet" href="../static/css/jsgrid.min.css" th:href="@{/css/jsgrid.min.css}"/>
+    <link type="text/css" rel="stylesheet" href="../static/css/jsgrid-theme.min.css" th:href="@{/css/jsgrid-theme.min.css}"/>
+
+    <script type="text/javascript" src="../static/js/jquery-ui.min.js" th:src="@{/js/jquery-ui.min.js}"></script>
+    <script type="text/javascript" src="../static/js/jsgrid.min.js" th:src="@{/js/jsgrid.min.js}"></script>
 </head>
 <body>
 <header>
@@ -34,6 +38,11 @@
             <li class="nav-item" th:classappend="${#strings.equals(view, '/registrace') ? 'active' : ''}">
                 <a href="../templates/registrace" th:href="@{/registrace}" class="nav-link text-dark">
                     Registrace
+                </a>
+            </li>
+            <li class="nav-item" th:classappend="${#strings.equals(view, '/uzivatele') ? 'active' : ''}">
+                <a href="../templates/registrace" th:href="@{/uzivatele}" class="nav-link text-dark">
+                    Uživatelé
                 </a>
             </li>
         </ul>
