--- a/attandance/src/main/resources/templates/registration/index.html
+++ b/attandance/src/main/resources/templates/registration/index.html
@@ -9,56 +9,58 @@
 </head>
 <body>
 <div th:include="layout.html"></div>
-<div class="form-group" id="registrationForm">
-    <form id="registrateForm">
-        <div class="form-group">
-            <label for="firstname">Jméno</label>
-            <input type="text" class="form-control" id="firstname" placeholder="Jméno">
-        </div>
-        <div class="form-group">
-            <label for="lastname">Příjmení</label>
-            <input type="text" class="form-control" id="lastname" placeholder="Příjmení">
-        </div>
-        <div class="form-group">
-            <label for="email">E-mail</label>
-            <input type="email" class="form-control" id="email" placeholder="E-mail">
-        </div>
-        <div class="form-group">
-            <label for="phone">Telefonní číslo</label>
-            <input type="text" class="form-control" id="phone" placeholder="605123456" >
-        </div>
-        <div class="form-group">
-            <label for="dateBirth">Datum narození</label>
-            <input type="date" class="form-control date-picker-popup" id="dateBirth" >
-        </div>
-        <div class="form-group">
-            <label for="role">Typ</label>
-            <select class="custom-select" id="role">
-                <option selected></option>
-                <option value="1">Dítě</option>
-                <option value="2">Trenér</option>
-                <option value="3">Návštěník</option>
-                <option value="4">Manažer</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="state">Stát</label>
-            <input type="text" class="form-control" id="state" placeholder="Stát" >
-        </div>
-        <div class="form-group">
-            <label for="city">Město</label>
-            <input type="text" class="form-control" id="city" placeholder="Město" >
-        </div>
-        <div class="form-group">
-            <label for="street">Ulice</label>
-            <input type="text" class="form-control" id="street" placeholder="Ulice">
-        </div>
-        <div class="form-group">
-            <label for="zip">Poštovní číslo</label>
-            <input type="text" class="form-control" id="zip" placeholder="50003">
-        </div>
-        <button type="button" class="btn btn-primary submitForm">Submit</button>
-    </form>
+<div class="page-content">
+    <div class="form-group" id="registrationForm">
+        <form id="registrateForm">
+            <div class="form-group">
+                <label for="firstname">Jméno</label>
+                <input type="text" class="form-control" id="firstname" placeholder="Jméno">
+            </div>
+            <div class="form-group">
+                <label for="lastname">Příjmení</label>
+                <input type="text" class="form-control" id="lastname" placeholder="Příjmení">
+            </div>
+            <div class="form-group">
+                <label for="email">E-mail</label>
+                <input type="email" class="form-control" id="email" placeholder="E-mail">
+            </div>
+            <div class="form-group">
+                <label for="phone">Telefonní číslo</label>
+                <input type="text" class="form-control" id="phone" placeholder="605123456" >
+            </div>
+            <div class="form-group">
+                <label for="dateBirth">Datum narození</label>
+                <input type="date" class="form-control date-picker-popup" id="dateBirth" >
+            </div>
+            <div class="form-group">
+                <label for="role">Typ</label>
+                <select class="custom-select" id="role">
+                    <option selected></option>
+                    <option value="1">Dítě</option>
+                    <option value="2">Trenér</option>
+                    <option value="3">Návštěník</option>
+                    <option value="4">Manažer</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="state">Stát</label>
+                <input type="text" class="form-control" id="state" placeholder="Stát" >
+            </div>
+            <div class="form-group">
+                <label for="city">Město</label>
+                <input type="text" class="form-control" id="city" placeholder="Město" >
+            </div>
+            <div class="form-group">
+                <label for="street">Ulice</label>
+                <input type="text" class="form-control" id="street" placeholder="Ulice">
+            </div>
+            <div class="form-group">
+                <label for="zip">Poštovní číslo</label>
+                <input type="text" class="form-control" id="zip" placeholder="50003">
+            </div>
+            <button type="button" class="btn btn-primary submitForm">Submit</button>
+        </form>
+    </div>
 </div>
 </body>
 </html>
@@ -80,14 +82,14 @@
                     'state'         : $('#state').val(),
                     'zip'           : $('#zip').val(),
                 },
-                'contactinfo' : {
+                'contactInfo' : {
                     'email'         : $('#email').val(),
                     'phone'         : $('#phone').val()
                 }
             };
             console.log(personData);
             $.ajax({
-                url: "/api/v1/person",
+                url: "/registrate",
                 method: "POST",
                 contentType: "application/json",
                 dataType : "json",
