--- a/attandance/src/main/resources/templates/users/index.html
+++ b/attandance/src/main/resources/templates/users/index.html
@@ -15,39 +15,46 @@
 
 
 <script>
-    var clients = [
-        { "Name": "Otto Clay", "Age": 25, "Country": 1, "Address": "Ap #897-1459 Quam Avenue", "Married": false },
-        { "Name": "Connor Johnston", "Age": 45, "Country": 2, "Address": "Ap #370-4647 Dis Av.", "Married": true },
-        { "Name": "Lacey Hess", "Age": 29, "Country": 3, "Address": "Ap #365-8835 Integer St.", "Married": false },
-        { "Name": "Timothy Henson", "Age": 56, "Country": 1, "Address": "911-5143 Luctus Ave", "Married": true },
-        { "Name": "Ramona Benton", "Age": 32, "Country": 3, "Address": "Ap #614-689 Vehicula Street", "Married": false }
-    ];
+    $(document).ready(function () {
+        var users = [];
+        $.ajax({
+            url: "api/v1/user",
+            data: "json",
+            contentType: "application/json",
+            method: "GET"
+        }).then(function (items) {
+            $.each(items, function (index, item) {
+                users[index]['firstname'] = item['person']['firstname'];
+                users[index]['lastname'] = item['person']['lastname'];
+                users[index]['username'] = item['username'];
+                users[index]['role'] = item['person']['role']["name"];
+                users[index]['active'] = item['person']['active'];
+                users[index]['company'] = item['company']['name'];
+            });
+            console.log(users);
+        });
 
-    var countries = [
-        { Name: "", Id: 0 },
-        { Name: "United States", Id: 1 },
-        { Name: "Canada", Id: 2 },
-        { Name: "United Kingdom", Id: 3 }
-    ];
+        $("#jsGrid").jsGrid({
+            width: "100%",
+            height: "400px",
 
-    $("#jsGrid").jsGrid({
-        width: "100%",
-        height: "400px",
+            searching: true,
+            editing: true,
+            sorting: true,
 
-        searching: true,
-        editing: true,
-        sorting: true,
+            controller: users,
 
-        data: clients,
-
-        fields: [
-            { name: "firstname", type: "text", title: "Jméno", width: 60 },
-            { name: "lastname", type: "text", title: "Příjmení", width: 60 },
-            { name: "role", type: "text", title: "Typ", width: 30 },
-            { name: "active", type: "checkbox", title: "Aktivní" , width: 20},
-            { name: "company", type: "text", title: "Firma", width: 50},
-            { type: "control", width: 50 }
-        ]
+            fields: [
+                { name: "firstname", type: "text", title: "Jméno", width: 60 },
+                { name: "lastname", type: "text", title: "Příjmení", width: 60 },
+                { name: "username", type: "text", title: "Příjmení", width: 60 },
+                { name: "role", type: "text", title: "Typ", width: 30 },
+                { name: "active", type: "checkbox", title: "Aktivní" , width: 20},
+                { name: "company", type: "text", title: "Firma", width: 50},
+                { type: "control", width: 50 }
+            ]
+        });
     });
+
 </script>
 
