--- a/attandance/src/main/resources/templates/profile/index.html
+++ b/attandance/src/main/resources/templates/profile/index.html
@@ -6,5 +6,14 @@
 </head>
 <body>
 <div th:include="layout.html"></div>
+    <div class="page-content">
+        <h1 th:text="${personid}"></h1>
+        <p th:text="${user.person.firstname}"></p>
+        <p th:text="${user.person.lastname}"></p>
+        <p th:text="${user.person.password}"></p>
+        <p th:text="${user.company.name}"></p>
+        <p th:text="${user.person.contactInfo.email}"></p>
+        <p th:text="${user.person.role.name}"></p>
+    </div>
 </body>
 </html>
