--- a/attandance/src/main/resources/templates/registration/index.html
+++ b/attandance/src/main/resources/templates/registration/index.html
@@ -10,8 +10,9 @@
 <body>
 <div th:include="layout.html"></div>
 <div class="page-content">
-    <h1 class="title">Registrace</h1>
+
     <div class="form-group" id="registrationForm">
+        <h1 class="title">Registrace</h1>
         <form id="registrateForm">
             <div class="form-group">
                 <label for="firstname">Jméno</label>
@@ -82,7 +83,7 @@
                 <input type="password" class="form-control" id="password2" placeholder="Password" required>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary submitForm">Submit</button>
+                <button type="submit" class="btn btn-primary submitForm">Odeslat</button>
             </div>
         </form>
     </div>
