--- a/attandance/src/main/resources/templates/users/index.html
+++ b/attandance/src/main/resources/templates/users/index.html
@@ -12,7 +12,7 @@
     <div class="loader"></div>
 </div>
 </body>
-</html>
+</html>3
 
 
 <script>
@@ -64,8 +64,8 @@
             fields: [
                 { name: "firstname", type: "text", title: "Jméno", width: 60 },
                 { name: "lastname", type: "text", title: "Příjmení", width: 60 },
-                { name: "username", type: "text", title: "Příjmení", width: 60 },
-                { name: "role", type: "text", title: "Typ", width: 30 },
+                { name: "username", type: "text", title: "Uživatelské jméno", width: 60 },
+                { name: "role", type: "text", title: "Role", width: 30 },
                 { name: "active", type: "checkbox", title: "Aktivní" , width: 20},
                 { name: "company", type: "text", title: "Firma", width: 50},
             ]
