--- a/attandance/src/main/resources/static/css/registration.css
+++ b/attandance/src/main/resources/static/css/registration.css
@@ -2,3 +2,10 @@
     margin-right: 20%;
     margin-left: 5%;
 }
+
+h1 {
+    color: whitesmoke;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
