--- a/attandance/src/main/resources/templates/profile/index.html
+++ b/attandance/src/main/resources/templates/profile/index.html
@@ -3,17 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <title>Profil</title>
+    <link rel="stylesheet" href="../static/css/profile.css" th:href="@{/css/profile.css}">
 </head>
 <body>
 <div th:include="layout.html"></div>
-    <div class="page-content">
-        <h1 th:text="${personid}"></h1>
-        <p th:text="${user.person.firstname}"></p>
-        <p th:text="${user.person.lastname}"></p>
-        <p th:text="${user.person.password}"></p>
-        <p th:text="${user.company.name}"></p>
-        <p th:text="${user.person.contactInfo.email}"></p>
-        <p th:text="${user.person.role.name}"></p>
+<span> </span>
+
+<div class="page-content">
+    <button type="button1" class="basic-btn">button1</button>
+    <button type="button2" class="basic-btn">button2</button>
+
+    <div class="nadpis">
+    <p>Profil</p>
     </div>
+
+    <div class="table-content">
+
+        <table>
+            <tr>
+                <th><p>ID uživatele:</p></th>
+                <th><p th:text="${personid}"></p></th>
+            </tr>
+            <tr>
+                <td><p>Jméno:</p></td>
+                <td><p th:text="${user.person.firstname}"></p></td>
+            </tr>
+            <tr>
+                <td><p>Příjmení:</p></td>
+                <td><p th:text="${user.person.lastname}"></p></td>
+            </tr>
+            <tr>
+                <td><p>Heslo:</p></td>
+                <td><p th:text="${user.person.password}"></p></td>
+            </tr>
+            <tr>
+                <td><p>Název společnosti:</p></td>
+                <td><p th:text="${user.company.name}"></p></td>
+            </tr>
+            <tr>
+                <td><p>E-mail:</p></td>
+                <td><p th:text="${user.person.contactInfo.email}"></p></td>
+            </tr>
+            <tr>
+                <td><p>Telefon:</p></td>
+                <td><p th:text="${user.person.contactInfo.phone}"></p></td>
+            </tr>
+            <tr>
+                <td><p>Role:</p></td>
+                <td><p th:text="${user.person.role.name}"></p></td>
+            </tr>
+        </table>
+    </div>
+
+</div>
 </body>
 </html>
