--- a/attandance/src/main/resources/templates/exhibition/index.html
+++ b/attandance/src/main/resources/templates/exhibition/index.html
@@ -6,5 +6,54 @@
 </head>
 <body>
 <div th:include="layout.html"></div>
+<div class="page-content">
+    <div id="jsGrid"></div>
+    <div class="loader"></div>
+</div>
 </body>
 </html>
+<script>
+    $(document).ready(function () {
+        let data = [];
+        $.ajax({
+            url: "api/v1/action",
+            data: "json",
+            contentType: "application/json",
+            method: "GET"
+        }).then(function (items) {
+            for (let i = 0; i < items.length; i++) {
+                console.log(items[i]);
+                let item =
+                    {
+                        "actionName": "<a href=/action/" + items[i].actionsid + ">" + items[i].actionName + "",
+                        "type": items[i].type === 0 ? "Vystoupení" : items[i].type === 1 ? "Workshop" : "Other",
+                        "date": items[i].dateAction,
+                        "city": items[i].address.city
+                    };
+                data.push(item);
+            }
+            renderJsGrid(data);
+            $(".loader").hide();
+        });
+
+    });
+
+    function renderJsGrid(data) {
+        $("#jsGrid").jsGrid({
+            width: "100%",
+            height: "100%",
+
+            searching: true,
+            sorting: true,
+
+            data: data,
+
+            fields: [
+                { name: "actionName", type: "text", title: "Jméno", width: 60 },
+                { name: "type", type: "text", title: "Typ", width: 60 },
+                { name: "date", type: "text", title: "Datum", width: 60 },
+                { name: "city", type: "text", title: "Město", width: 30 }
+            ]
+        });
+    }
+</script>
