Add more grids, add user to action, action profile

--- a/attandance/src/main/resources/static/css/layout.css
+++ b/attandance/src/main/resources/static/css/layout.css
@@ -119,4 +119,7 @@ li a:hover, .active {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+button a {
+    text-decoration: none;
+}
 
