--- a/attandance/src/main/resources/templates/layout.html
+++ b/attandance/src/main/resources/templates/layout.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="../static/css/layout.css" th:href="@{/css/layout.css}">
     <link type="text/css" rel="stylesheet" href="../static/css/jsgrid.min.css" th:href="@{/css/jsgrid.min.css}"/>
     <link type="text/css" rel="stylesheet" href="../static/css/jsgrid-theme.min.css" th:href="@{/css/jsgrid-theme.min.css}"/>
+    <link type="text/css" rel="stylesheet" href="../static/css/jquery.timepicker.min.css" th:href="@{/css/jquery.timepicker.min.css}"/>
 
     <script type="text/javascript" src="../static/js/jquery-ui.min.js" th:src="@{/js/jquery-ui.min.js}"></script>
     <script type="text/javascript" src="../static/js/jsgrid.min.js" th:src="@{/js/jsgrid.min.js}"></script>
     <script type="text/javascript" src="../static/js/main.js" th:src="@{/js/main.js}"></script>
+    <script type="text/javascript" src="../static/js/jquery.timepicker.min.js" th:src="@{/js/jquery.timepicker.min.js}"></script>
 </head>
 <body>
 <header>
@@ -42,8 +44,13 @@
                 </a>
             </li>
             <li class="nav-item users" th:classappend="${#strings.equals(view, '/uzivatele') ? 'active' : ''}">
-                <a href="../templates/registrace" th:href="@{/uzivatele}" class="nav-link text-dark">
+                <a href="../templates/uzivatele" th:href="@{/uzivatele}" class="nav-link text-dark">
                     Uživatelé
+                </a>
+            </li>
+            <li class="nav-item attendees" th:classappend="${#strings.equals(view, '/ucastnici') ? 'active' : ''}">
+                <a href="../templates/ucastnici" th:href="@{/ucastnici}" class="nav-link text-dark">
+                    Účástníci
                 </a>
             </li>
         </ul>
@@ -70,6 +77,7 @@
             $(".users").hide();
             $(".exhibition").hide();
             $(".attendance").hide();
+            $(".attendees").hide();
 
         } else {
             if (role === 0) {
